fix(workflow_enhancements_1): Alignment
Fix inline editible element alignment.

--- a/app/frontend/stylesheets/blocks/_inline-editable-element.scss
+++ b/app/frontend/stylesheets/blocks/_inline-editable-element.scss
@@ -1,4 +1,10 @@
 .inline-editable-element {
+
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   @include element('control') {
     color: $primary;
 
